# bank-simulation

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  UML.mdj
include/: Class.h
src/: Class.cpp  main.cpp
src/account/: Account.cpp  Account.h  JuniorAccount.h  PersonalAccount.cpp
src/bank/: Account.cpp  Account.h  Bank.cpp  Bank.h  JuniorAccount.cpp  JuniorAccount.h  PersonalAccount.cpp  PersonalAccount.h  StudentsAccount.cpp  StudentsAccount.h  System.cpp  System.h  Transfer.cpp  Transfer.h  User.cpp  User.h
src/banking/: Account.cpp  Account.h  Bank.cpp  Bank.h  Bill.cpp  Bill.h  Client.cpp  Client.h  ForeignCurrencyAccount.cpp  ForeignCurrencyAccount.h  Investment.cpp  Investment.h  JuniorAccount.cpp  JuniorAccount.h  Loan.cpp  Loan.h  PersonalAccount.cpp  PersonalAccount.h  StudentsAccount.cpp  StudentsAccount.h
src/other/: Date.cpp  Date.h  Transfer.cpp  Transfer.h
src/system/: SimulationLogic.cpp  SimulationLogic.h  Sysadmin.cpp  Sysadmin.h  System.cpp  System.h  User.cpp  User.h  UserInterface.cpp  UserInterface.h
test/: BankTest.cpp  config.cpp
